--- a/css-properties/index.html
+++ b/css-properties/index.html
@@ -13,15 +13,15 @@
     </header>
     <main>
         <section>
-            <h1 class="title">First section</h1>
+            <!-- <h1 class="title">First section</h1> -->
             <p id="first-para" class="content">My name is <b>Ugwu Kasie</b> <br> My love for technology start when I got my new phone(android). I kept wondering how this was able to work with a click of a button and so on. I didn't pay much attention to it then. Opportunity came knocking when a friend of mine posted about a bootcamp on his status. I grabbed the opportunity and registered and since then it hsa been one good news to another. I love creating thing and which frontend helps me to achieve. The idea that something I create can impact someone across the world now, or in the future is what drives my passion for Technology. <i>And, with skill and hard work - anyone can do it.</i> </p>
         </section>
         <section>
-            <h1 class="title">Second section</h1>
+            <!-- <h1 class="title">Second section</h1> -->
             <p id="second-para" class="content">I have learnt a lot so far. We started with what programming is and different aspect of it, ranging from frontend, backend, software testing, etc. We were introduced to different <b> integrated development environment (IDE)</b> and text editors. I picked visual studio code and I have been in love with it since then. Introduction to HTML was fun. We learnt about HTML elements, layout, comment, colors, id, class, formatting and so much more. When we moved to CSS, it was a little bit scary but I was able to catch on after a lot of practice thanks to our wonderful mentors that kept pushing us to be better. CSS makes the front-end of a website shine and it creates a great user experience. Without CSS, websites would be less pleasing to the eye and likely much harder to navigate. <i>In addition to layout and format, CSS is responsible for font color and more.</i></p>
         </section>
         <section>
-            <h1 class="title">Third section</h1>
+            <!-- <h1 class="title">Third section</h1> -->
             <p id="third-para" class="content"> CSS uses what's called the box model to tell web browsers how to display and space different elements on a web page. These boxes have four major components. <br>
             <b>Content</b> - The innermost part of the box. Content could be an image, text, heading, or something else. <br>
             <b>Padding</b> - The inner space between the content and the border of your box. <br>
